--- a/app/views/user_applications/show.html.slim
+++ b/app/views/user_applications/show.html.slim
@@ -6,12 +6,7 @@
 hr
 = @slices.map(&:timestamp).to_json
 
-div style='position: relative; height: 300px'
-
-  div id="req_times"   style='position: absolute; top: 0;'
-  div id="req_counts"  style='position: absolute; top: 0;'
-  div id='deployments' style='position: relative; top: 220px;'
-
+div id='graphs'
 
 - if @slices.length > 0
   javascript:
@@ -19,54 +14,10 @@ div style='position: relative; height: 300px'
     var app_uptime             = #{get_app_uptime(@slices).to_json.html_safe};
     var slice_data             = #{@slices.to_json.html_safe};
     var exceptions             = #{extract_exception_data_for_app_show(@slices).to_json.html_safe};
-    var deployments            = #{extract_deployment_data_for_app_show(@deployments).to_json.html_safe};
     var request_data_groups    = #{extract_request_data_for_app_show(@slices, @deployments).to_json.html_safe};
 
-    var min_ts = 0;
-    var max_ts = 100;
-
-    var palette = new Rickshaw.Color.Palette( { sheme: 'colorwheel' });
-
-
-
-    var stacked_response_times_data = #{extract_stacked_response_times_for_app_show(@slices).to_json.html_safe};
-    var request_times_series = [];
-
-    for (var i = 0 ; i < stacked_response_times_data.length; i++) {
-      request_times_series.push({
-          color: palette.color(),
-          data: stacked_response_times_data[i]
-        });
-    }
-
-    var request_times_graph = new Rickshaw.Graph( {
-        element: document.querySelector("#req_times"),
-        width: 940,
-        height: 200,
-        renderer: 'bar',
-        series: request_times_series
-    });
-
-
-    var request_counts_graph = new Rickshaw.Graph( {
-        element: document.querySelector("#req_counts"),
-        width: 940,
-        renderer: 'line',
-        height: 200,
-        series: [{
-          color: palette.color(),
-          data: #{extract_request_counts_for_app_show(@slices).to_json.html_safe}
-        }]
-    });
-
-    var deployments_graph = new Rickshaw.Graph.Annotate({
-        graph: request_counts_graph,
-        element: document.getElementById('deployments')
-    });
-
-    for (var i=0; i < deployments.length; i++) {
-      deployments_graph.add(deployments[i][0], deployments[i][1]);
-    }
-
-    request_counts_graph.render();
-    request_times_graph.render();
+    UserApplication.show.initialize_graphs("#graphs",
+      #{extract_stacked_response_times_for_app_show(@slices).to_json.html_safe},
+      #{extract_request_counts_for_app_show(@slices).to_json.html_safe},
+      #{extract_deployment_data_for_app_show(@deployments).to_json.html_safe}
+    );
