--- a/app/views/user_applications/show.html.slim
+++ b/app/views/user_applications/show.html.slim
@@ -13,11 +13,11 @@ div id='graphs'
     var app_load               = #{get_app_load(@slices).to_json.html_safe};
     var app_uptime             = #{get_app_uptime(@slices).to_json.html_safe};
     var slice_data             = #{@slices.to_json.html_safe};
-    var exceptions             = #{extract_exception_data_for_app_show(@slices).to_json.html_safe};
     var request_data_groups    = #{extract_request_data_for_app_show(@slices, @deployments).to_json.html_safe};
 
     UserApplication.show.initialize_graphs("#graphs",
       #{extract_stacked_response_times_for_app_show(@slices).to_json.html_safe},
       #{extract_request_counts_for_app_show(@slices).to_json.html_safe},
-      #{extract_deployment_data_for_app_show(@deployments).to_json.html_safe}
+      #{extract_deployment_data_for_app_show(@deployments).to_json.html_safe},
+      #{extract_exception_data_for_app_show(@slices).to_json.html_safe}
     );
