--- a/app/views/user_applications/show.html.slim
+++ b/app/views/user_applications/show.html.slim
@@ -6,14 +6,12 @@
 hr
 = @slices.map(&:timestamp).to_json
 
-div id='graphs'
-
 - if @slices.length > 0
+  h1 Load: #{get_app_load(@slices).round(2)}%
+
+  div id='graphs'
+
   javascript:
-    var app_load               = #{get_app_load(@slices).to_json.html_safe};
-    var app_uptime             = #{get_app_uptime(@slices).to_json.html_safe};
-    var slice_data             = #{@slices.to_json.html_safe};
-    var request_data_groups    = #{extract_request_data_for_app_show(@slices, @deployments).to_json.html_safe};
 
     UserApplication.show.initialize_graphs("#graphs",
         #{extract_stacked_response_times_for_app_show(@slices).to_json.html_safe},
@@ -21,3 +19,23 @@ div id='graphs'
         #{extract_deployment_data_for_app_show(@deployments).to_json.html_safe},
         #{extract_exception_data_for_app_show(@slices).to_json.html_safe}
       );
+
+  - request_data = extract_request_data_for_app_show(@slices, @deployments)
+  table.table.table-condensed.table-striped
+    tr
+      th Name
+      th Avg Request Time
+      th Avg Request Count
+      th Exceptions
+      th Time Trend
+      th Count Trend
+      th Exceptions Trend
+    - request_data.each do |r|
+      tr
+        td= r[:name]
+        td= r[:req_times]
+        td= r[:req_count]
+        td= r[:exception_count]
+        td= r[:slope_times]
+        td= r[:slope_count]
+        td= r[:slope_exceptions]
