--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -72,12 +72,18 @@ img.truestack-logo {
 // Use APplicat Show
 #graphs {
   position: relative;
+  height: 220px;
+  margin-bottom: 15px;
   .graph {
+    top: 0;
+    position: absolute;
     height: 200px;
     width: 940px;
   }
   .exceptions-annotation {
+    top: 205px;
   }
   .deployments-annotation {
+    top: 225px;
   }
 }
