Adding client_types and a report page.  Tracks the types.

--- a/app/views/admins/_subnav.html.slim
+++ b/app/views/admins/_subnav.html.slim
@@ -6,3 +6,6 @@
     li
       a href=admin_access_report_path
         Access Report
+    li
+      a href=admin_client_types_path
+        Client Types
